# newsfeed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: design_and_implementation.md  efficiency_and_correctness.md
src/newsfeed/: cli.py
src/newsfeed/api/: server.py
src/newsfeed/config/: keywords_config.yaml  loader.py  sources_config.yaml
src/newsfeed/ingestion/: event.py  reddit.py  rss.py  sources.py  store.py
src/newsfeed/processing/: aggregate.py  filter.py  rank.py  score.py
src/newsfeed/utils/: helpers.py  logging_config.py
tests/: conftest.py
tests/unit/: test_api.py  test_ingestion.py  test_processing.py  test_utils.py
